<resources>
    <string name="app_name">Urban Tech</string>
    <string name="action_settings">Settings</string>
    <string name="checkout">Checkout</string>
    <string name="place_order">Place Order</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="enter_your_shipping_address">Enter your shipping address</string>
    <string name="payment">Payment Details:</string>
    <string name="enter_your_payment_information">Enter your payment information</string>
    <string name="street_name">Enter Street Name</string>
    <string name="city">Enter City</string>
    <string name="province">Province:</string>
    <string name="country">Country:</string>
    <string name="totalCheckOut">TOTAL PRICE:</string>
    <string name="postal_code">Enter Postal Code</string>
    <string name="card_number">Enter Card Number</string>
    <string name="expiry_date">Expiry Date:</string>
    <string name="cvv">CVV</string>
    <string name="streetName">Street Name:</string>
    <string name="total">Total:</string>
    <string name="items_list">ITEMS LIST</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_your_phone_number">Enter your phone number:</string>
    <string name="email_address">Email Address:</string>
    <string name="enter_your_email_address">Enter your Email Address:</string>
    <string name="qtyUp">Increase quantity</string>
    <string name="qtyDown">Decrease quantity</string>
    <string name="deleteItem" />
    <string name="delete">Delete</string>
    <string name="order_placed">Order Placed!</string>
    <string name="filter">FILTER</string>
    <string name="logout">Logout</string>
    <string name="card_information">Card Information:</string>
    <string name="address_information">Address Information:</string>
    <string name="price">Price:</string>
    <string name="specification_item_1">Specification: Item 1</string>
    <string name="specification_item_2">Specification: Item 2</string>
    <string name="comparison">Comparison</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="compare">Compare</string>
    <string name="login">Login</string>
    <string name="brands">Brands</string>
    <string name="apple">Apple</string>
    <string name="samsung">Samsung</string>
    <string name="pixel">Pixel</string>
    <string name="lenovo">Lenovo</string>
    <string name="dell">Dell</string>
    <string name="msi">MSI</string>
    <string name="acer">Acer</string>
    <string name="asus">Asus</string>
    <string name="alienware">Alienware</string>
    <string name="graphic_cards">Graphic Cards</string>
    <string name="rtx_3060">RTX 3060</string>
    <string name="rtx_3070">RTX 3070</string>
    <string name="rtx_3080">RTX 3080</string>
    <string name="rtx_4090">RTX 4090</string>
    <string name="processors">Processors</string>
    <string name="i5">i5</string>
    <string name="i7">i7</string>
    <string name="i9">i9</string>
    <string name="orders">Orders:</string>
    <string name="order_information">Order Information:</string>
    <string name="receipts">Receipts:</string>
    <string name="receipt_information">Receipt Information:</string>
    <string name="save_information">Save Information</string>
    <string name="total_check_out">Total Check-Out</string>
    <string name="recommendations">RECOMMENDED ITEMS</string>
    <string name="one_click_checkout">One Click Checkout</string>
    <string name="welcome">Welcome</string>
</resources>