<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:checkableBehavior="all"
    android:orientation="vertical">

    <item
        android:title="@string/brands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="always">

        <menu android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <item
                android:id="@+id/checkbox4"
                android:title="@string/apple"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

            <item
                android:id="@+id/checkbox5"
                android:title="@string/samsung"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

            <item
                android:id="@+id/checkbox6"
                android:title="@string/pixel"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

            <item
                android:id="@+id/checkbox7"
                android:title="@string/lenovo"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

            <item
                android:id="@+id/checkbox8"
                android:title="@string/dell"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

            <item
                android:id="@+id/checkbox9"
                android:title="@string/msi"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

            <item
                android:id="@+id/checkbox10"
                android:title="@string/acer"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

            <item
                android:id="@+id/checkbox11"
                android:title="@string/asus"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

            <item
                android:id="@+id/checkbox12"
                android:title="@string/alienware"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

        </menu>

    </item>

    <item
        android:title="@string/graphic_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="always">

        <menu android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <item
                android:id="@+id/checkbox13"
                android:title="@string/rtx_3060"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

            <item
                android:id="@+id/checkbox14"
                android:title="@string/rtx_3070"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

            <item
                android:id="@+id/checkbox15"
                android:title="@string/rtx_3080"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

            <item
                android:id="@+id/checkbox16"
                android:title="@string/rtx_4090"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

        </menu>

    </item>

    <item
        android:title="@string/processors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="always">

        <menu android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <item
                android:id="@+id/checkbox17"
                android:title="@string/i5"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

            <item
                android:id="@+id/checkbox18"
                android:title="@string/i7"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

            <item
                android:id="@+id/checkbox19"
                android:title="@string/i9"
                android:actionLayout="@layout/checkbox_layout"
                android:checkable="true"/>

        </menu>

    </item>
</menu>