<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/createaccount_layout">

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/create_account"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_create_account"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:inputType="textPassword"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/email"/>

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:inputType="textPassword"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/password"/>

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:onClick="setUpAccountOnClick"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_confirm_password"/>
    </LinearLayout>

    </RelativeLayout>
</ScrollView>
