<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/activity_account">

            <TextView
                android:id="@+id/accountName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:text="@string/welcome" />

            <TextView
                android:id="@+id/cardInfo"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="150dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="149dp"
                android:text="@string/card_information" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardInfoCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardInfo"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="48dp">

                <TextView
                    android:id="@+id/cardInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:text="@string/card_information"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/addressInfo"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="130dp"
            android:text="@string/address_information" />

        <androidx.cardview.widget.CardView
            android:id="@+id/addressInfoCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addressInfo"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="48dp">

                <TextView
                    android:id="@+id/addressInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:text="@string/address_information"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/receiptInfo"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="130dp"
            android:text="@string/receipts" />

        <androidx.cardview.widget.CardView
            android:id="@+id/receiptInfoCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="48dp">

                <TextView
                    android:id="@+id/receiptInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:text="@string/receipt_information"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:onClick="logoutOnClick"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>