<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/outerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/comparison"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/activity_compare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="48dp">

                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/price1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/price"
                        android:textSize="16sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/specification1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/price1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp"
                        android:text="@string/specification_item_1"
                        android:textColor="@color/black" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="48dp">

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/price2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image2"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp"
                        android:text="@string/price"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/specification2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/price2"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp"
                        android:text="@string/specification_item_2"
                        android:textColor="@color/black" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes">

        <TextView
            android:id="@+id/priceCompare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="4dp"
            android:textColor="@color/black"
            android:textSize="24sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes">

        <TextView
            android:id="@+id/stockCompare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="4dp"
            android:textColor="@color/black"
            android:textSize="24sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes">

            <TextView
                android:id="@+id/priceCompareDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </RelativeLayout>


    </LinearLayout>

</ScrollView>
